# custos

./: .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  LICENSE  Makefile  README.md  custos_server.py  docker-compose.yml  install.sh  install_custos.sh  pyproject.toml  setup_custos.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
tests/: test_api.py
